# gluten

./: .gitignore  CMakeLists.txt  glut.cpp  glut.h  main.cpp
glad/: CMakeLists.txt
glad/include/glad/: glad.h
glad/src/: glad.c
src/: CMakeLists.txt
src/examples/: CMakeLists.txt  camera_example.cpp  cube_example.cpp  font_example.cpp  lighting.cpp  shadow.cpp  skybox.cpp  texture_example.cpp  uniform_color_example.cpp  vertex_color_example.cpp
src/gluten/: CMakeLists.txt
src/gluten/base/: Application.cpp  Application.hpp  Color.hpp  Window.hpp
src/gluten/camera/: Camera.hpp  Light.hpp
src/gluten/debug/: exceptions.hpp  log.hpp
src/gluten/fonts/: Font.cpp  Font.hpp
src/gluten/geometry/: Mesh.cpp  Mesh.hpp  Model.hpp  Triangle.hpp
src/gluten/osutils/: pathutils.hpp
src/gluten/shader/: Material.hpp  Shader.hpp
src/gluten/shader/examples/: colorForward.vs  colorized.fs  empty.vs  lighting.fs  lighting.vs  shadow.fs  shadow.vs  shadow_debug.fs  skybox.fs  skybox.vs  text.fs  text.vs  textured.fs  textured_nocolor.fs  uniform.fs  uv_map.vs  uv_map_nocolor.vs
src/gluten/texture/: Framebuffer.hpp  STBTextureLoader.cpp  STBTextureLoader.hpp  Texture.hpp
src/gluten/utils/: accu.hpp  glm.hpp  include_fmt.hpp  string.hpp
